remove unused usings in all files

--- a/Calendar/Views/Manage/ManageLogins.cshtml
+++ b/Calendar/Views/Manage/ManageLogins.cshtml
@@ -1,5 +1,5 @@
-﻿@model Calendar.Models.ManageLoginsViewModel
-@using Microsoft.Owin.Security
+﻿@using Microsoft.Owin.Security
+@model Calendar.Models.ManageLoginsViewModel
 @{
     ViewBag.Title = "Manage your external logins";
 }
