--- a/Calendar/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Calendar/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@model Calendar.Models.ExternalLoginListViewModel
-@using Microsoft.Owin.Security
+﻿@using Microsoft.Owin.Security
+@model Calendar.Models.ExternalLoginListViewModel
 
 <h4>Use another service to log in.</h4>
 <hr />
